<resources>
    <string name="app_name">Spending</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="an_empty_story">An empty story</string>
    <string name="add">add</string>
    <string name="name_category">Name category</string>
    <string name="sum">Sum</string>
    <string name="app_theme">App theme</string>
    <string name="white">White</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="spendingapp">SpendingApp</string>
    <string name="keep_track_of_your_expenses_simply_and_conveniently">Keep track of your expenses simply and conveniently!</string>
    <string name="right_now">Right Now →</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="currencies_in_the_app">Currencies in the app</string>
</resources>